<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.onboarding.OnboardingActivity">

    <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_background"
            android:layout_height="match_parent"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/activity_onboarding_welcome"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_welcome"
            android:textSize="26sp"
            android:background="@color/settings_item_background_color"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:text="@string/activity_onboarding_language"
                android:paddingBottom="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>


        <TextView
                android:layout_width="match_parent"
                android:text="@string/lang_en"
                android:background="@color/settings_item_background_color"
                android:padding="16dp"
                android:textSize="17sp"
                android:id="@+id/tv_language"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
            android:layout_width="match_parent"
            android:text="@string/activity_settings_terms_of_use_and_privacy_policy"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_above="@+id/tv_next"
            android:id="@+id/tv_terms_of_use"
            android:padding="16dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/activity_onboarding_next"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/settings_item_background_color"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:id="@+id/tv_next"
            android:padding="16dp"
            android:layout_height="wrap_content"/>


</RelativeLayout>